--- a/reina_cabrera_david/src/main/resources/application.properties
+++ b/reina_cabrera_david/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=reina_cabrera_david
 
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_integrado?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_integrado?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Estoesparajdbc25*
 
